--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
             color: #666;
             margin-bottom: 2.5rem;
             line-height: 1.8;
+            word-break: keep-all;
         }
 
         .slide-cta {
@@ -732,7 +733,7 @@
                     <h1 class="slide-title">매일, 가장 빨리<br>돌아가고 싶은 곳</h1>
                     <p class="slide-description">
                         유지보수 걱정 없이, 오래 살수록 편안한 집.<br>
-                        당신의 취향과 삶을 담아 진짜 쉼이 있는 공간을 만듭니다.
+                        당신의 취향과 삶을 담아<br>진짜 쉼이 있는 공간을 만듭니다.
                     </p>
                     <div class="slide-cta">
                         <a href="/portfolio" class="btn btn-primary">포트폴리오 보기</a>
@@ -749,7 +750,7 @@
                     <p class="slide-description">
                         설비, 방수, 단열 — 마감 뒤에 숨은 기본기.<br>
                         이 기본이 무너지면 삶의 질도 무너집니다.<br>
-                        디자인지그는 보이지 않는 곳부터 제대로 잡습니다.
+                        디자인지그는 보이지 않는 곳부터<br>제대로 잡습니다.
                     </p>
                     <div class="slide-cta">
                         <a href="/portfolio" class="btn btn-primary">포트폴리오 보기</a>
@@ -764,7 +765,7 @@
                     <p class="slide-subtitle">Timeless Design</p>
                     <h1 class="slide-title">튼튼한 기본 위에<br>그리는 아름다움</h1>
                     <p class="slide-description">
-                        트렌드를 쫓기보다, 오래 봐도 편안한 공간. 기본이 탄탄해야 아름다움도 오래갑니다.<br>
+                        트렌드를 쫓기보다, 오래 봐도 편안한 공간.<br>기본이 탄탄해야 아름다움도 오래갑니다.<br>
                         디자인지그는 그 순서를 지킵니다.
                     </p>
                     <div class="slide-cta">
@@ -1043,7 +1044,7 @@
 
         // Auto play
         function startAutoplay() {
-            autoplayInterval = setInterval(nextSlide, 5000);
+            autoplayInterval = setInterval(nextSlide, 8000);
         }
 
         function stopAutoplay() {
