--- a/index.html
+++ b/index.html
@@ -698,6 +698,25 @@
                 grid-template-columns: 1fr;
             }
         }
+
+        /* Responsive Line Breaks */
+        .br-mo {
+            display: block;
+        }
+
+        .br-pc {
+            display: none;
+        }
+
+        @media (min-width: 769px) {
+            .br-mo {
+                display: none;
+            }
+
+            .br-pc {
+                display: block;
+            }
+        }
     </style>
 </head>
 
@@ -733,7 +752,7 @@
                     <h1 class="slide-title">매일, 가장 빨리<br>돌아가고 싶은 곳</h1>
                     <p class="slide-description">
                         유지보수 걱정 없이, 오래 살수록 편안한 집.<br>
-                        당신의 취향과 삶을 담아<br>진짜 쉼이 있는 공간을 만듭니다.
+                        당신의 취향과 삶을 담아<br class="br-mo"> 진짜 쉼이 있는 공간을 만듭니다.
                     </p>
                     <div class="slide-cta">
                         <a href="/portfolio" class="btn btn-primary">포트폴리오 보기</a>
@@ -750,7 +769,7 @@
                     <p class="slide-description">
                         설비, 방수, 단열 — 마감 뒤에 숨은 기본기.<br>
                         이 기본이 무너지면 삶의 질도 무너집니다.<br>
-                        디자인지그는 보이지 않는 곳부터<br>제대로 잡습니다.
+                        디자인지그는 보이지 않는 곳부터<br class="br-mo"> 제대로 잡습니다.
                     </p>
                     <div class="slide-cta">
                         <a href="/portfolio" class="btn btn-primary">포트폴리오 보기</a>
