상담문의_안내글수정

--- a/quote.html
+++ b/quote.html
@@ -536,8 +536,8 @@
                 <div class="notice-box">
                     <p>간단한 정보만 먼저 접수한 뒤,</p>
                     <p>고객님의 공간과 취향에 맞춘</p>
-                    <p><strong>맞춤 상담 설문</strong>을 안내드리고 있습니다.</p>
-                    <p class="notice-highlight">설문 완료 시 보다 정확한 상담이 가능합니다.</p>
+                    <p><strong>맞춤 상담 설문</strong>을 고객님의 이메일로 안내드리고 있습니다.</p>
+                    <p class="notice-highlight">이메일 확인 후 설문을 작성해 주시면<br>보다 정확한 상담이 가능합니다.</p>
                 </div>
 
                 <div class="form-group privacy-consent">
