--- a/columns.html
+++ b/columns.html
@@ -931,7 +931,7 @@
     <main>
         <section class="page-hero">
             <h1>COLUMNS</h1>
-            <p>기본이 탄탄해야 아름다움도 오래갑니다. 디자인지그가 인테리어를 대하는 생각, 하자 없는 시공의 디테일, 현실적인 가이드까지. 현장에서 쌓은 이야기를 나눅니다.</p>
+            <p>기본이 탄탄해야 아름다움도 오래갑니다. 디자인지그가 인테리어를 대하는 생각, 하자 없는 시공의 디테일, 현실적인 가이드까지. 현장에서 쌓은 이야기를 나눕니다.</p>
         </section>
 
         <section class="columns-section">
