--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -5110,6 +5110,16 @@
                 return matchSearch && matchStatus && matchDate;
             });
 
+            // 최신순 정렬 (customerId 기준: YYMMDD-XXX)
+            filtered.sort((a, b) => {
+                // createdAt이 있으면 우선 사용
+                if (a.createdAt && b.createdAt) {
+                    return new Date(b.createdAt) - new Date(a.createdAt);
+                }
+                // customerId로 정렬 (내림차순)
+                return (b.customerId || '').localeCompare(a.customerId || '');
+            });
+
             if (filtered.length === 0) {
                 container.innerHTML = '<div style="padding:30px 16px;text-align:center;color:#86868b;font-size:12px;">해당 조건의 고객이 없습니다.</div>';
             } else {
