Update Apps Script URL and add integrated script

--- a/quote.html
+++ b/quote.html
@@ -621,8 +621,8 @@
     </footer>
 
     <script>
-        // [중요] 여기에 구글 앱스 스크립트 배포 후 생성된 URL을 넣어주세요!
-        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwQEy3T022isal-fP6ECvAd1zWXOns3HxWW8MPRu3U4ecZhDb4B81fyX31QSj4fT0c/exec';
+        // [통합] Google Apps Script Web App URL
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzoCSrvqLOjRsNxqXyuiy7lccuog7LlUeyNUokCRBaDEJ3YnFig2NRVjO2FqsvaPKm3Mw/exec';
 
         function handleSubmit(e) {
             e.preventDefault();
